--- a/index.html
+++ b/index.html
@@ -1,182 +1,408 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
 
-  <!-- Favicon / App Icons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="icon-32.png" />
-  <link rel="icon" type="image/png" sizes="64x64" href="icon-64.png" />
-  <link rel="apple-touch-icon" href="mindcoach-icon-1024.png" />
-  <link rel="icon" type="image/png" sizes="1024x1024" href="mindcoach-icon-1024.png" />
+    <title>MindCoach</title>
 
-  <title>MindCoach</title>
+    <!-- Favicon / App Icon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="1024x1024"
+      href="mindcoach-icon-1024.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="mindcoach-icon-1024.png"
+    />
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #f2f5f7; /* Calm background */
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      color: #2a2a2a;
-    }
+    <style>
+      :root {
+        --bubble-ai: #f8efe4;   /* soft beige */
+        --bubble-me: #d7e7f7;   /* your blue */
+        --text: #2f3a45;
+        --muted: #6f7a84;
+        --border-soft: rgba(220, 225, 230, 0.9);
+      }
 
-    header {
-      padding: 20px;
-      text-align: center;
-      background: white;
-      border-bottom: 1px solid #ddd;
-    }
+      /* Page background */
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Helvetica, Arial, sans-serif;
+        color: var(--text);
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        background:
+          radial-gradient(circle at 15% 25%, rgba(220, 240, 255, 0.55), transparent 70%),
+          radial-gradient(circle at 70% 20%, rgba(230, 255, 245, 0.45), transparent 75%),
+          radial-gradient(circle at 30% 80%, rgba(255, 245, 230, 0.5), transparent 70%),
+          radial-gradient(circle at 85% 75%, rgba(235, 255, 250, 0.4), transparent 70%),
+          linear-gradient(135deg, #eef6f9, #f7fafc, #eef6f8);
+      }
 
-    header img {
-      width: 70px;
-      margin-bottom: 8px;
-    }
+      header {
+        padding: 16px 20px 10px;
+        background: rgba(255, 255, 255, 0.95);
+        border-bottom: 1px solid rgba(225, 230, 235, 0.9);
+        backdrop-filter: blur(8px);
+      }
 
-    header h1 {
-      margin: 0;
-      font-size: 26px;
-      font-weight: 600;
-    }
+      .header-inner {
+        max-width: 800px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
 
-    header p {
-      margin: 6px 0 0;
-      font-size: 14px;
-      color: #555;
-    }
+      header img {
+        width: 52px;
+        height: 52px;
+        border-radius: 14px;
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
+        object-fit: cover;
+      }
 
-    #log {
-      flex: 1;
-      overflow-y: auto;
-      padding: 15px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      scroll-behavior: smooth;
-    }
+      .title-block h1 {
+        margin: 0;
+        font-size: 24px;
+        letter-spacing: 0.03em;
+      }
 
-    /* Chat bubbles */
-    .bubble {
-      max-width: 85%;
-      padding: 12px 16px;
-      border-radius: 14px;
-      line-height: 1.4;
-      font-size: 15px;
-      white-space: pre-wrap;
-    }
+      .title-block p {
+        margin: 3px 0 0;
+        font-size: 13px;
+        color: var(--muted);
+      }
 
-    .me {
-      align-self: flex-end;
-      background: #d7e7f7; /* Your soft blue */
-      color: #1b324d;
-      border-bottom-right-radius: 4px;
-    }
+      /* Shell around chat bubbles + input */
+      #shell {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        padding: 10px 12px 14px;
+      }
 
-    .ai {
-      align-self: flex-start;
-      background: #f8efe4; /* Calm beige (Option A) */
-      color: #3a3a3a;
-      border-bottom-left-radius: 4px;
-    }
+      #chatCard {
+        max-width: 800px;
+        width: 100%;
+        background: rgba(255, 255, 255, 0.9);
+        border-radius: 18px;
+        border: 1px solid var(--border-soft);
+        box-shadow: 0 14px 30px rgba(0, 0, 0, 0.06);
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+      }
 
-    /* Input Area */
-    #inputArea {
-      display: flex;
-      gap: 10px;
-      padding: 12px;
-      background: #ffffff;
-      border-top: 1px solid #ccc;
-    }
+      #log {
+        flex: 1;
+        overflow-y: auto;
+        padding: 14px 14px 8px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        scroll-behavior: smooth;
+      }
 
-    #msg {
-      flex: 1;
-      font-size: 16px;
-      padding: 12px;
-      border: 1px solid #bbb;
-      border-radius: 12px;
-      outline: none;
-    }
+      /* Chat bubbles */
+      .bubble {
+        max-width: 85%;
+        padding: 10px 14px;
+        border-radius: 14px;
+        line-height: 1.45;
+        font-size: 15px;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+        opacity: 0;
+        transform: translateY(4px);
+        animation: fadeIn 0.22s ease-out forwards;
+      }
 
-    #send {
-      padding: 12px 18px;
-      background: #2a6171;
-      color: white;
-      border: none;
-      border-radius: 12px;
-      font-size: 15px;
-      cursor: pointer;
-    }
+      .me {
+        align-self: flex-end;
+        background: var(--bubble-me);
+        color: #1b324d;
+        border-bottom-right-radius: 4px;
+      }
 
-    #send:hover {
-      background: #1f4a55;
-    }
-  </style>
-</head>
+      .ai {
+        align-self: flex-start;
+        background: var(--bubble-ai);
+        color: #3a3a3a;
+        border-bottom-left-radius: 4px;
+      }
 
-<body>
+      @keyframes fadeIn {
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
 
-<header>
-  <img src="mindcoach-icon-1024.png" alt="MindCoach Logo" />
-  <h1>MindCoach</h1>
-  <p>You matter. You're heard. Calm guidance in every language by LuxeMind.</p>
-</header>
+      /* Typing indicator */
+      .typing {
+        display: inline-flex;
+        align-items: center;
+        gap: 6px;
+        font-size: 13px;
+        color: var(--muted);
+      }
 
-<div id="log"></div>
+      .dots {
+        display: inline-flex;
+        gap: 3px;
+      }
 
-<div id="inputArea">
-  <input id="msg" placeholder="Type your message…" />
-  <button id="send">Send</button>
-</div>
+      .dots span {
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background: var(--muted);
+        animation: bounce 1s infinite ease-in-out;
+      }
 
-<script>
-  const log = document.getElementById("log");
-  const input = document.getElementById("msg");
-  const btn = document.getElementById("send");
+      .dots span:nth-child(2) {
+        animation-delay: 0.15s;
+      }
 
-  // Add message bubble
-  function add(who, text) {
-    const div = document.createElement("div");
-    div.className = "bubble " + (who === "me" ? "me" : "ai");
-    div.textContent = text;
-    log.appendChild(div);
-    log.scrollTop = log.scrollHeight;
-  }
+      .dots span:nth-child(3) {
+        animation-delay: 0.3s;
+      }
 
-  // AUTO WELCOME MESSAGE
-  window.addEventListener("DOMContentLoaded", () => {
-    add(
-      "ai",
-      "Welcome. I'm here for you with calm, clarity, and care. Whenever you're ready, tell me what's on your mind."
-    );
-  });
+      @keyframes bounce {
+        0%,
+        80%,
+        100% {
+          transform: translateY(0);
+          opacity: 0.4;
+        }
+        40% {
+          transform: translateY(-3px);
+          opacity: 1;
+        }
+      }
 
-  // Send message
-  btn.onclick = async () => {
-    const text = input.value.trim();
-    if (!text) return;
-    add("me", text);
-    input.value = "";
+      /* Input area */
+      #inputArea {
+        display: flex;
+        gap: 8px;
+        padding: 10px 12px;
+        border-top: 1px solid rgba(225, 225, 225, 0.9);
+        background: rgba(252, 252, 252, 0.96);
+      }
 
-    const response = await fetch("/api/chat", {
-      method: "POST",
-      body: text
-    });
+      #msg {
+        flex: 1;
+        font-size: 15px;
+        padding: 9px 11px;
+        border: 1px solid rgba(190, 200, 210, 0.9);
+        border-radius: 12px;
+        resize: none;
+        max-height: 110px;
+        outline: none;
+        line-height: 1.4;
+      }
 
-    const reader = response.body.getReader();
-    let aiText = "";
+      #msg:focus {
+        border-color: #2a6171;
+        box-shadow: 0 0 0 2px rgba(42, 97, 113, 0.12);
+      }
 
-    while (true) {
-      const { done, value } = await reader.read();
-      if (done) break;
-      aiText += new TextDecoder().decode(value);
-    }
+      #send {
+        padding: 10px 17px;
+        background: #2a6171;
+        color: white;
+        border: none;
+        border-radius: 12px;
+        font-size: 14px;
+        font-weight: 600;
+        cursor: pointer;
+        box-shadow: 0 8px 18px rgba(29, 81, 96, 0.35);
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 78px;
+      }
 
-    add("ai", aiText);
-  };
-</script>
+      #send:disabled {
+        opacity: 0.7;
+        cursor: default;
+        box-shadow: none;
+      }
 
-</body>
+      #send:hover:not(:disabled) {
+        background: #234f5d;
+      }
+
+      @media (max-width: 768px) {
+        header {
+          padding: 12px 12px 8px;
+        }
+        .header-inner {
+          flex-direction: row;
+          align-items: center;
+        }
+        header img {
+          width: 46px;
+          height: 46px;
+        }
+        .title-block h1 {
+          font-size: 21px;
+        }
+        #shell {
+          padding: 10px 8px 12px;
+        }
+        #chatCard {
+          border-radius: 14px;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <header>
+      <div class="header-inner">
+        <img src="mindcoach-icon-1024.png" alt="MindCoach Logo" />
+        <div class="title-block">
+          <h1>MindCoach</h1>
+          <p>You matter. You're heard. Calm guidance in every language by LuxeMind.</p>
+        </div>
+      </div>
+    </header>
+
+    <div id="shell">
+      <div id="chatCard">
+        <div id="log"></div>
+
+        <div id="inputArea">
+          <textarea
+            id="msg"
+            rows="1"
+            placeholder="Share what's on your mind… (Enter to send, Shift+Enter for a new line)"
+          ></textarea>
+          <button id="send">Send</button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const log = document.getElementById("log");
+      const input = document.getElementById("msg");
+      const btn = document.getElementById("send");
+
+      function scrollToBottom() {
+        log.scrollTop = log.scrollHeight;
+      }
+
+      function addBubble(who, text, extraClass = "") {
+        const div = document.createElement("div");
+        div.className = "bubble " + (who === "me" ? "me" : "ai") + (extraClass ? " " + extraClass : "");
+        div.textContent = text;
+        log.appendChild(div);
+        scrollToBottom();
+        return div;
+      }
+
+      function addTyping() {
+        const wrapper = document.createElement("div");
+        wrapper.className = "bubble ai";
+        const span = document.createElement("span");
+        span.className = "typing";
+        span.innerHTML = "MindCoach is thinking<span class='dots'><span></span><span></span><span></span></span>";
+        wrapper.appendChild(span);
+        log.appendChild(wrapper);
+        scrollToBottom();
+        return wrapper;
+      }
+
+      function autoResize() {
+        input.style.height = "auto";
+        input.style.height = Math.min(input.scrollHeight, 110) + "px";
+      }
+
+      // Warm welcome on load
+      window.addEventListener("DOMContentLoaded", () => {
+        addBubble(
+          "ai",
+          "Welcome. I'm here for you with calm, clarity, and care. Whenever you're ready, tell me what's on your mind."
+        );
+        autoResize();
+      });
+
+      async function sendMessage() {
+        const text = input.value.trim();
+        if (!text) return;
+
+        addBubble("me", text);
+        input.value = "";
+        autoResize();
+        input.focus();
+
+        btn.disabled = true;
+        btn.textContent = "Thinking…";
+
+        const typingBubble = addTyping();
+
+        try {
+          const res = await fetch("/api/chat", {
+            method: "POST",
+            body: text
+          });
+
+          if (!res.body) {
+            typingBubble.remove();
+            addBubble("ai", "Hmm, I couldn't get a response. Please try again in a moment. 🌿");
+          } else {
+            const reader = res.body.getReader();
+            let aiText = "";
+            const decoder = new TextDecoder();
+
+            while (true) {
+              const { done, value } = await reader.read();
+              if (done) break;
+              aiText += decoder.decode(value, { stream: true });
+            }
+
+            typingBubble.remove();
+            addBubble("ai", aiText || "I’m here with you. 🌿");
+          }
+        } catch (err) {
+          typingBubble.remove();
+          addBubble(
+            "ai",
+            "It looks like there was a connection issue. Please check your internet and try again when you're ready."
+          );
+        } finally {
+          btn.disabled = false;
+          btn.textContent = "Send";
+          scrollToBottom();
+        }
+      }
+
+      btn.addEventListener("click", sendMessage);
+
+      // Enter = send, Shift+Enter = new line
+      input.addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+          if (e.shiftKey) {
+            // allow newline
+            return;
+          } else {
+            e.preventDefault();
+            sendMessage();
+          }
+        }
+      });
+
+      input.addEventListener("input", autoResize);
+    </script>
+  </body>
 </html>
